fix white space around the header

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
-.head{
+/* .head{
    
     margin: 0;
     height:30vh;
-}
+} */
